@@ -1,3 +1,11 @@
+2008-06-18  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	reviewed by: Claude Paroz
+
+	* releases.xml.in: Whitespace additions so it is more
+	easily navigatable, e.g. using "paragraph movements" in
+	Vim.
+
 2008-06-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* gnome-modules.xml.in: Fixup indentation and add a
